@@ -2,7 +2,6 @@ package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
 import com.github.scribejava.core.builder.api.OAuth2SignatureType;
-import com.github.scribejava.core.model.Verb;
 
 public class LiveApi extends DefaultApi20 {
 
@@ -18,18 +17,13 @@ public class LiveApi extends DefaultApi20 {
     }
 
     @Override
-    public Verb getAccessTokenVerb() {
-        return Verb.GET;
-    }
-
-    @Override
     public String getAccessTokenEndpoint() {
         return "https://login.live.com/oauth20_token.srf";
     }
 
     @Override
     protected String getAuthorizationBaseUrl() {
-        return "https://oauth.live.com/authorize";
+        return "https://login.live.com/oauth20_authorize.srf";
     }
 
     @Override
